--- a/esri/index.html
+++ b/esri/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>New MVT Tiles with ArcGIS JS</title>
-    <link rel="stylesheet" href="node_modules/ol/ol.css">
+    <link rel="stylesheet" href="https://js.arcgis.com/4.27/esri/themes/light/main.css" />
     <style>
       .map {
         width: 100%;
