--- a/ol-xyz/index.html
+++ b/ol-xyz/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Old XYZ Tiles</title>
+    <title>ol-xyz</title>
     <link rel="stylesheet" href="node_modules/ol/ol.css">
     <style>
       .map {
