--- a/esri-xyz/index.html
+++ b/esri-xyz/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>New MVT Tiles with ArcGIS JS</title>
+    <title>esri-xyz</title>
     <link rel="stylesheet" href="https://js.arcgis.com/4.27/esri/themes/light/main.css" />
     <style>
       .map {
