--- a/ol-mvt/index.html
+++ b/ol-mvt/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div id="map" class="map"></div>
+    <button id="img">2020 image</button>
     <script type="module" src="main.js"></script>
   </body>
 </html>
