osm vector tiles

--- a/ol-mvt/index.html
+++ b/ol-mvt/index.html
@@ -27,6 +27,7 @@
   <body>
     <div id="map" class="map"></div>
     <button id="img">2020 image</button>
+    <button id="osmv">OSM vector</button>
     <script type="module" src="main.js"></script>
   </body>
 </html>
